<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--Data item that holds the reminder details-->
        <variable
            name="reminderDataItem"
            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".locationreminders.ReminderDescriptionActivity">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reminder_details"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/purple"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reminder_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:text="@string/reminder_title"
                android:textColor="@color/purple"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:text="@{reminderDataItem.title}"
                android:textColor="@color/purple"
                tools:text ="california"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:text="@string/reminder_desc"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/purple"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:layout_weight="1"
                android:text="@{reminderDataItem.description}"
                tools:text="some description"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/purple"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:text="@string/reminder_location"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            android:textColor="@color/purple"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/latitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:layout_weight="1"
                android:text="@string/latitude"
                android:textColor="@color/purple"/>

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:layout_weight="1"
                tools:text="latitude"
                android:text="@{reminderDataItem.latitude.toString()}"
                android:textColor="@color/purple"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/longitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:layout_weight="1"
                android:text="@string/longitude"
                android:textColor="@color/purple"/>

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:layout_weight="1"
                tools:text= "longitude"
                android:text="@{reminderDataItem.longitude.toString()}"
                android:textColor="@color/purple"/>
        </LinearLayout>

    </LinearLayout>
</layout>